--- a/index.css
+++ b/index.css
@@ -1,3 +1,31 @@
-#container {
-  color: blue;
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+  border: 1px solid black;
+}
+.nav-items > ul {
+  list-style-type: none;
+  display: flex;
+  padding-top: 40px;
+}
+.nav-items > ul > li {
+  padding: 5px;
+}
+.logo {
+  width: 100px;
+}
+.card {
+  width: 200px;
+  border: 1px solid rgb(90, 80, 80);
+  padding: 10px;
+  margin: 10px;
+}
+
+.card > img {
+  width: 100%;
+}
+.restaurant-list {
+  display: flex;
+  flex-wrap: wrap;
 }
